# chutes-bench-runner

./: .env.example  .gitignore  BENCHMARK_COMPLIANCE_REPORT.md  GREMIUM_INTEGRATION_CONCEPT.md  INTERNAL.md  README.md  docker-compose.worker.priority.yml  docker-compose.worker.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  simulate_hle.py
backend/.venv_tmp/: pyvenv.cfg
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  002_seed_benchmarks.py  003_add_user_sessions.py  004_add_affine_envs.py  004_add_run_auth_and_test_code.py  005_add_affine_envs.py  006_add_subset_and_worker_heartbeats.py  007_add_new_benchmarks.py  008_add_provider_fields.py  009_default_select_benchmarks.py  009_default_select_new_benchmarks.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth_routes.py  deps.py  routes.py  schemas.py
backend/app/benchmarks/: __init__.py  base.py  registry.py  scicode_utils.py  utils.py
backend/app/benchmarks/adapters/: __init__.py  aa_omniscience.py  aalcr.py  affine_envs.py  aime.py  critpt.py  gdpval.py  gpqa.py  (+8 more)
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  benchmark.py  export.py  model.py  run.py  session.py  worker.py
backend/app/services/: __init__.py  auth_service.py  chutes_client.py  export_service.py  gremium_client.py  inference_client.py  model_service.py  run_service.py  sandy_service.py  signed_export_service.py  worker_service.py
backend/app/worker/: __init__.py  main.py  runner.py
backend/tests/: __init__.py  conftest.py  test_aa_omniscience.py  test_api.py  test_bench_utils.py  test_hle_judge.py  test_integration.py  test_live_inference.py  test_sanitize.py  test_subset.py
(+43 files in other folders)
